# sportapp-back

./: .gitignore  .gitlint  .pre-commit-config.yaml  Makefile  README.md  coverage.xml  pyproject.toml
projects/alerts/: .coveragerc  ecs-container-definition.json  main.py  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties  taskdef.json
projects/alerts/app/: main.py
projects/alerts/app/components/: prioritizer.py  publisher.py
projects/alerts/app/config/: settings.py
projects/alerts/app/infrastructure/: aws.py  firebase.py
projects/alerts/app/models/: model.py
projects/alerts/app/models/schemas/: schema.py
projects/alerts/app/routes/: alerts.py
projects/alerts/app/services/: alerts.py
projects/authorizer/: .coveragerc  Dockerfile  README.md  conftest.py  lambda_function.py  lambda_function_test.py  local_example.py  local_template.yaml  pyproject.toml  pytest.ini  sonar-project.properties
projects/sport-sessions/: .coveragerc  ecs-container-definition.json  main.py  pyproject.toml  pytest.ini  sonar-project.properties
projects/sport-sessions/app/config/: settings.py
projects/sport-sessions/app/exceptions/: exceptions.py
projects/sport-sessions/app/models/: model.py
projects/sport-sessions/app/models/schemas/: schema.py
projects/sport-sessions/app/routes/: sport_sessions.py
projects/sport-sessions/app/services/: sport_sessions.py  utils.py
projects/sport-sessions/tests/: conftest.py
projects/sport-sessions/tests/integration/: sport_session_test.py
projects/sport-sessions/tests/unit/exceptions/: sport_session_exceptions_test.py
projects/sport-sessions/tests/unit/models/: sport_session_models_test.py
projects/sport-sessions/tests/unit/routes/: sport_session_routes_test.py
projects/sport-sessions/tests/unit/services/: sport_sessions_test.py  utils_test.py
projects/sports/: .coveragerc  Dockerfile  ecs-container-definition.json  main.py  pyproject.toml  sonar-project.properties
projects/sports/app/config/: db.py
projects/sports/app/exceptions/: exceptions.py
projects/sports/app/models/: model.py
projects/sports/app/routes/: sports.py
projects/sports/app/services/: sports.py
projects/sports/migrations/: env.py
projects/sports/migrations/versions/: ccb1fd457114_create_sports.py
projects/sports/tests/: conftest.py
projects/sports/tests/integration/: sports_test.py
projects/sports/tests/unit/exceptions/: sport_exceptions_test.py
projects/sports/tests/unit/models/: sport_models_test.py
projects/sports/tests/unit/routes/: sports_routes_test.py
projects/sports/tests/unit/services/: sports_test.py
projects/users/: .coveragerc  .gitignore  Dockerfile  db.py  ecs-container-definition.json  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties  taskdef.json  utils.py
projects/users/app/config/: settings.py
projects/users/app/exceptions/: exceptions.py
projects/users/app/models/: users.py
projects/users/app/models/mappers/: mapper.py  user_mapper.py
projects/users/app/routes/: users_routes.py
projects/users/app/security/: jwt.py  passwords.py
projects/users/app/services/: external.py  users.py
projects/users/app/tasks/: sync_db.py
projects/users/app/utils/: user_cache.py  utils.py
projects/users/migrations/: env.py
projects/users/migrations/versions/: 2544812b6ab7_create_training_limitations.py  4eee161e3eef_create_food_limitations.py
projects/users/tests/integration/: .test.env  users_test.py
projects/users/tests/utils/: users_util.py
(+155 files in other folders)
