[tool.poetry]
name = "sportapp-back"
version = "0.1.0"
description = ""
authors = ["Brayan Henao <b.henaoc@uniandes.edu.co>", "Erik Loaiza <ef.loaiza@uniandes.edu.co>",
    "Rodrigo Escobar <r.escobarl@uniandes.edu.co"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
isort = "^5.13.2"
black = "^24.3.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pre-commit = "^3.6.2"
gitlint = "^0.19.1"
check-jsonschema = "^0.28.0"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.mypy]
disallow_untyped_defs = true
show_error_context = true
warn_return_any = true

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
