[tool.poetry]
name = "alerts"
version = "0.1.0"
description = ""
authors = ["Brayan Henao <b.henaoc@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
pydantic = "^2.6.4"
starlette = "^0.37.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
