[tool.poetry]
name = "authorizer"
version = "0.1.0"
description = ""
authors = ["Misoteam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyjwt="^2.8.0"
boto3="^1.34.79"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
