[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Brayan Henao <b.henaoc@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.74"
sse-starlette = "^2.0.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
pydantic = "^2.6.4"
bcrypt = "^4.1.2"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
faker = "^24.4.0"
coverage = "^7.4.4"
httpx = "^0.27.0"
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.23.6"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
